<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:com.victorlaerte.supermarket="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        com.victorlaerte.supermarket:actionViewClass="android.support.v7.widget.SearchView"
        com.victorlaerte.supermarket:showAsAction="always" />

    <item
        android:id="@+id/filter"
        android:title="@string/filter_by">

        <menu>
            <item
                android:id="@+id/filter_no_filter"
                android:title="@string/filter_no_filter" />
            <item
                android:id="@+id/filter_bakery"
                android:title="@string/filter_bakery" />
            <item
                android:id="@+id/filter_dairy"
                android:title="@string/filter_dairy" />
            <item
                android:id="@+id/filter_fruit"
                android:title="@string/filter_fruit" />
            <item
                android:id="@+id/filter_vegetable"
                android:title="@string/filter_vegetable" />
            <item
                android:id="@+id/filter_meat"
                android:title="@string/filter_meat" />
        </menu>
    </item>

    <item
        android:id="@+id/logout"
        android:icon="@mipmap/ic_leave"
        android:title="@string/logout"
        com.victorlaerte.supermarket:showAsAction="ifRoom" />
</menu>
